# powerfit

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.rocm  LICENSE  NOTICE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
.history/powerfit/: powerfit_20230109231312.py  powerfit_20230109231350.py  volume_20230109213104.py  volume_20230109215247.py  volume_20230109220205.py  volume_20230109223016.py  volume_20230109223056.py  volume_20230109223623.py  volume_20230109225029.py  volume_20230109225143.py  volume_20230109225235.py  volume_20230109230735.py  volume_20230109230743.py  volume_20230109230819.py  volume_20230109230822.py  volume_20230109230903.py  volume_20230109231534.py  volume_20230109231702.py
powerfit/: .kernels.py.swp  .powerfitter.py.swp  __init__.py  analyzer.py  atompar.py  elements.py  em.py  helpers.py  image_pyramid.py  kernels.cl  kernels.py  pdb.py  points.py  powerfit.py  powerfitter.py  pyclfft.py  rotations.py  scripts.py  shape_descriptor.py  solutions.py  structure.py  structure_helpers.py  volume.py  volume_helpers.py
powerfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
powerfit/IO/: __init__.py  mmcif.py  mrc.py  parse_vol.py  pdb.py  xplor.py
powerfit/data/: E.npy  c48n309.npy  c48u1.npy  c48u1153.npy  c48u1201.npy  c48u1641.npy  c48u181.npy  c48u2219.npy  c48u27.npy  c48u3733.npy  c48u83.npy  c600vc.npy
powerfit/kernels/: kernels.cl  powerfit.cl
powerfit/tests/: run_tests.py  test__powerfit.py  test_extensions.py  test_gpyfft.py  test_kernels.py  test_powerfitter.py  test_rotations.py  test_shape_descriptor.py  test_volume.py
powerfit_em/data/: c48u815.npy  c600v.npy
powerfit_em/tests/: run_tests.py  test_kernels.py  test_powerfitter.py
scripts/: atom2dens  atom2dens.py  convert  fsc-curve.py  generate_fits  image-pyramid  powerfit  rot_search.py  zone
src/: _extensions.c  _powerfit.c  _powerfit.pyx  libpowerfit.c  libpowerfit.pyx
src/powerfit/: powerfit.py  shape_descriptor.py
src/powerfit/data/: c48u2947.npy
src/powerfit/scripts/: __init__.py  atom2dens.py  fsc-curve.py
src/powerfit_em/: analyzer.py  powerfit.py  powerfitter.py  rotations.py  volume.py
src/powerfit_em/data/: README  c48n527.npy  c48n9.npy
src/powerfit_em/scripts/: __init__.py  fsc-curve.py
test-cases/EMD-1046/: header_1046.xml  run_powerfit.sh
test-cases/EMD-1884/: analyze.py  run_powerfit.sh
test-cases/EMD-1997/: 1997.map  header_1997.xml  run_powerfit.py  run_powerfit.sh
test-cases/EMD-2017/: analyze.py  run_powerfit.sh
test-cases/EMD-2325/: analyze.py  run_powerfit.sh
test-cases/HADDOCK-virus-antibody/: run_powerfit.sh  subunit.xplor
tests/: test__powerfit.py  test_extensions.py  test_gpyfft.py  test_kernels.py  test_powerfitter.py  test_rotations.py  test_shape_descriptor.py  test_volume.py  testkernels.py
