[build-system]
requires = ["setuptools", "numpy>=1.8", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "powerfit-em"
version = "3.0.0"
description = "Rigid body fitting of high-resolution structures in low-resolution cryo-electron microscopy density maps"
authors = [{ name = "Gydo C.P. van Zundert", email = "g.c.p.vanzundert@uu.nl" }]
maintainers = [{ name = "BonvinLab" }, { email = "bonvinlab.support@uu.nl" }]
requires-python = ">=3.10"
dynamic = ["readme"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=1.8",
    "pyfftw>=0.12.0; platform_machine != 'wasm32'",
    "scipy"
]

[project.optional-dependencies]
opencl = ["pyopencl", "siphash24"]
pocl = ["pyopencl[pocl]", "siphash24"]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/haddocking/powerfit"

[project.scripts]
powerfit = "powerfit_em.powerfit:main"
image-pyramid = "powerfit_em.scripts:image_pyramid"
em2em = "powerfit_em.scripts:em2em"

[tool.setuptools]
packages = ["powerfit_em"]
package-data = { "powerfit_em" = ["data/*.npy", "kernels.cl"] }
# ext_modules is still in setup.py as numpy.get_include() 
# and cythonize() can not be used here

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.cibuildwheel]
# Skip Pypy and older Alpine versions
skip = "pp* cp310-musllinux* cp311-musllinux* cp312-musllinux* *universal2"
archs = ["auto64"]
test-command = "powerfit --help"

# For some reason the source wheel for pyfftw is used instead of the binary wheel
# so we install its compilation dependencies manually
# Outside cibuildwheel images it installs the binary wheel
[[tool.cibuildwheel.overrides]]
select = "cp*-manylinux*"
before-test = "yum install -y fftw-devel"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add fftw-dev"
